--- a/style.css
+++ b/style.css
@@ -27,9 +27,138 @@ html { box-sizing: border-box; }
 	#f0f0f0		světle šedé pozadí prostřední sekce
 	#303339		tmavé pozadí patičky
 */
-
-
 body {
 	margin: 0;
+	font-family: 'Lora', serif;
+	color: #242424;
+	margin: auto;
+	font-size: 18px;
+	line-height: 1.5;
 }
-
+h1, 
+h2,
+h3 {
+	font-family: 'Playfair Display', serif;
+	font-weight: bold;
+	line-height: 1.25;
+}
+h2 {
+	color: #3e606b;
+	font-size: 36px;
+	margin: 0;
+}
+h3 {
+	color: #3e606b;
+	font-size: 18px;
+	text-align: center;
+}
+.header {
+	display: flex;
+	justify-content: space-between;
+	padding: 30px;
+	max-width: 1100px;
+	margin: auto;
+}
+.logo {
+	width: 170px;
+	margin: 0;
+}
+.menu li{
+	display: inline;
+}
+.menu a {
+	text-decoration: none;
+	border-radius: 20px;
+	padding: 10px 15px;
+	color: #242424;
+}
+.menu a:hover,
+.menu a:active {
+	background-color: #f195b2;
+	color: #FFFFFF;
+}
+.content {
+	max-width: 1100px;
+	margin: auto;
+}
+.hero {
+	background-image: url(images/cupcake.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	padding: 80px 0;
+}
+.hero h1 {
+	font-size: 52px;
+	margin: 0;
+}
+.hero p {
+	font-size: 24px;
+	font-style: italic;
+}
+.hero-text {
+	color: #FFFFFF;
+	padding-right: 440px;
+}
+.welcome {
+	padding: 80px 0;
+}
+.container {
+	display: flex;
+	align-items: center;
+}
+.column {
+	margin-right: 30px;
+	flex-basis: 50%;
+}
+.column a {
+	text-decoration: none;
+	border-radius: 30px;
+	color: #FFFFFF;
+	background-color: #f195b2;
+	padding: 15px 40px;
+}
+.column a:hover,
+.column a:active {
+	background-color: #d2567d;
+	color: #FFFFFF;
+}
+.photo {
+	max-width: 100%;
+	border-radius: 5px;
+}
+.offer {
+	padding: 80px 0;
+	background-color: #f0f0f0;
+}
+.offer-container {
+	display: flex;
+}
+.product {
+	display: flex;
+	padding: 0px;
+	border-radius: 5px;
+	flex-wrap: wrap;
+	margin: 0 15px;
+	box-shadow: 1px 1px 10px 0 #00000033;
+}
+.product-content {
+	display: flex;
+	flex-direction: column;
+	padding: 20px;
+}
+.product img {
+	width: 100%;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
+.baking {
+	padding: 80px 0;
+}
+.footer {
+	background-color: #303339;
+	color: #f0f0f0;
+	margin: 0;
+	padding: 30px 0;
+	text-align: center;
+}
